Detect XFCE desktop environment using XDG_CURRENT_DESKTOP

So far XFCE was only detected using the DESKTOP_SESSION environment variable,
which is not sufficient on all systems. The variable might contain different
values like lightdm-xsession. This change adds support to detect XFCE using the
XDG_CURRENT_DESKTOP environment variable, like it is done for Gnome, KDE and
other desktop environments.

R=thomasanderson@chromium.org

Bug: 863706
Change-Id: I30f8471a8e8fbea1d25c6b3586c9919d27d83e09
Reviewed-on: https://chromium-review.googlesource.com/1137814
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575170}
Former-commit-id: b874ce1bff85d9fdbbc938411d12254fa453058a